Fix tests, remove more old discolure menu code
- Fixed an issue where attempting to render 404.html would result in a
  failure to build a route in the inherited main_template.html.
Previously we were expecting `current_service` to be available but in
some cases it is not (/_debug endpoint)
- Fixed the new folder and sample library buttons
- Added CSS to position the badge indicator to the middle right side of
  a button as top-right was causing some layout issues when the button
wrapped in certain empty states
- Fixed an issue where the sticky elements were being duplicated when
  viewing an empty folder
- Fixed an issue where the page title and heading text disagreed when
  browsing folders vs just the template list.

--- a/app/assets/stylesheets/tailwind/components/empty-list.css
+++ b/app/assets/stylesheets/tailwind/components/empty-list.css
@@ -12,26 +12,5 @@
       background-size: contain;
     }
   }
-
-  /* Layout for empty state controls container */
-  #nothing_selected .js-stick-at-bottom-when-scrolling {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  /* When controls are sticky, switch to horizontal layout and remove top margin
-     as there is now enough space for the sample library button to fit in a single line
-  */
-  .js-stick-at-bottom-when-scrolling.content-fixed .indicator-relative,
-  .js-stick-at-bottom-when-scrolling.content-fixed__bottom .indicator-relative {
-    margin-top: 0;
-  }
-  .js-stick-at-bottom-when-scrolling.content-fixed,
-  .js-stick-at-bottom-when-scrolling.content-fixed__bottom {
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-  }
   /*! purgecss end ignore */
 }
